--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -25,7 +25,7 @@ u, a {
 
 /* ==========> Login <========== */
 .login_bg {
-  background: url("../Image/1village1bealer2.png") no-repeat center fixed;
+  background: url("../Image/One.png") no-repeat center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
